2007-01-08  Luca Ferretti  <elle.uca@libero.it>

	* data/epiphany.pc.in: 

	Added "icondir" variable ( == $datadir/$package/icons ).
	The purpose is allow extensions to install custom themeable icons
	in this directory, so they can use named icons without add a new
	icon search path.

2007-01-08  Diego Escalante Urrelo <diegoe@svn.gnome.org>

	* src/bookmarks/ephy-bookmarks-editor.c:
	* lib/widgets/ephy-node-view.c:

	Workaround/semi-fix for bug #351814. The real cause of the problem is
	the user_data that is never set on a GtkTreeIter, so the Ephy
	implementation of the tree makes it to have a stamp of 0 being that
	way an invalid iter. Patch by Diego Escalante Urrelo.

2007-01-08  Diego Escalante Urrelo <diegoe@svn.gnome.org>

	* data/glade/form-signing-dialog.glade:
	* data/glade/prefs-dialog.glade:

	Removed the hardcoded invisible char, note that this might readd
	itself to the file if someone edits it. It has been suggested that we
	move over to glade-3. Patch by Vitali Ischenko. Bug #393910.

2007-01-03  Diego Escalante Urrelo <diegoe@svn.gnome.org>

	* embed/ephy-favicon-cache.c: (icon_is_obsolete),
	(remove_obsolete_icons):
	* embed/ephy-history.c: (page_is_obsolete),
	(remove_obsolete_pages):
	
	Avoid use of localtime by computing expiry in seconds instead of days.
	Patch by Chris Wilson.

2007-01-03  Diego Escalante Urrelo  <diegoe@svn.gnome.org>

	* embed/ephy-favicon-cache.c: (ephy_favicon_cache_init):
	* embed/ephy-history.c: (ephy_history_init):
	* lib/Makefile.am:
	* lib/ephy-glib-compat.h:
	* src/bookmarks/ephy-bookmarks.c: (ephy_bookmarks_save_delayed):
	* src/ephy-dbus.c: (session_filter_func), (system_filter_func):
	* src/ephy-extensions-manager.c: (reload_cb):
	* src/ephy-session.c: (confirm_shutdown_cb):

	Utilize GLib's new g_timeout_add_seconds to reduce context switches
	and improve CPU/power efficiency. Patch by Chris Wilson.


2007-01-03  Diego Escalante Urrelo <diegoe@svn.gnome.org>

	* data/glade/prefs-dialog.glade:
